--- a/src/data/surveyConfig.json
+++ b/src/data/surveyConfig.json
@@ -1,4 +1,9 @@
 {
+    "keyQuestions": {
+        "gender": "q1",
+        "singleParent": "q3",
+        "isParent": "q4"
+    },
     "questions": [
         {
             "id": "q1",
@@ -9,6 +14,178 @@
                 "Female"
             ],
             "next": "q2"
+        },
+        {
+            "id": "q2",
+            "screenType": "select",
+            "questionText": "So we can get to know you better, tell us about your relationship status.",
+            "options": [
+                "Single",
+                "In a relationship"
+            ],
+            "next": {
+                "Single": "q3",
+                "In a relationship": "q4"
+            }
+        },
+        {
+            "id": "q3",
+            "screenType": "select",
+            "questionText": "Are you a single parent?",
+            "options": [
+                "Yes",
+                "No"
+            ],
+            "next": "q5"
+        },
+        {
+            "id": "q4",
+            "screenType": "select",
+            "questionText": "Are you a parent?",
+            "options": [
+                "Yes",
+                "No"
+            ],
+            "next": "q10"
+        },
+        {
+            "id": "q5",
+            "screenType": "select",
+            "conditionalText": {
+                "gender": {
+                    "Male": "male",
+                    "Female": "female"
+                },
+                "singleParent": {
+                    "Yes": "who have children",
+                    "No": ""
+                }
+            },
+            "questionText": "Single {gender} {singleParent} need a slightly different approach to improve their relationship. Which statement best describes you?",
+            "options": [
+                "I’m very unhappy with how things are going in my relationship",
+                "I’m unhappy with parts of my relationship, but some things are working well",
+                "I’m generally happy in my relationship"
+            ],
+            "next": "q6"
+        },
+        {
+            "id": "q6",
+            "screenType": "select",
+            "questionText": "Do you tend to overthink?",
+            "options": [
+                "Yes",
+                "No"
+            ],
+            "next": {
+                "Yes": "q7",
+                "No": "q9"
+            }
+        },
+        {
+            "id": "q7",
+            "screenType": "select",
+            "questionText": "What is most important to you?",
+            "options": [
+                "Success",
+                "Romance",
+                "Stability",
+                "Freedom"
+            ],
+            "next": "feedback"
+        },
+        {
+            "id": "q9",
+            "screenType": "select",
+            "questionText": "Is emotional control tricky for you?",
+            "options": [
+                "Yes",
+                "Sometimes",
+                "Rarely",
+                "Not at all"
+            ],
+            "next": "feedback"
+        },
+        {
+            "id": "q10",
+            "screenType": "select",
+            "conditionalText": {
+                "gender": {
+                    "Male": "Male",
+                    "Female": "female"
+                },
+                "isParent": {
+                    "Yes": "who have children",
+                    "No": ""
+                }
+            },
+            "questionText": "{gender} {isParent} need a slightly different approach to find their perfect partner. But first, how did you feel in your last relationship?",
+            "options": [
+                "I was unhappy with low things were going in my relationship",
+                "I was unhappy with parts of my relationship, but some thing were working",
+                "I was generally happy with my relationship",
+                "I’ve never been in a relationship"
+            ],
+            "next": "q11"
+        },
+        {
+            "id": "q11",
+            "screenType": "select",
+            "questionText": "Is your partner an introvert or extrovert?",
+            "options": [
+                "Introvert",
+                "Extrovert",
+                "A bit of both"
+            ],
+            "next": "q12"
+        },
+        {
+            "id": "q12",
+            "screenType": "select",
+            "questionText": "What is your partner’s gender?",
+            "options": [
+                "Male",
+                "Female"
+            ],
+            "next": "q13"
+        },
+        {
+            "id": "q13",
+            "screenType": "select",
+            "questionText": "Do you agree with the statement below?",
+            "additionalText": "“My partner and I make sex a priority in our relationship”",
+            "options": [
+                "Strongly agree",
+                "Agree",
+                "Neutral",
+                "Disagree",
+                "Strongly disagree"
+            ],
+            "next": "q14"
+        },
+        {
+            "id": "q14",
+            "screenType": "select",
+            "questionText": "When you think about your relationship goals, you feel...?",
+            "options": [
+                "Optimistic! They are totally doable, with some guidance.",
+                "Cautious. I’ve struggled before, but I’m hopeful.",
+                "I’m feeling a little anxious, honestly."
+            ],
+            "next": "feedback"
+        },
+        {
+            "id": "feedback",
+            "screenType": "select",
+            "questionText": "Where did you hear about us?",
+            "options": [
+                "Poster or Billboard",
+                "Friend or Family",
+                "TV",
+                "Radio",
+                "Other"
+            ],
+            "next": "summary"
         }
     ]
 }
